#9 Updated DashboardLayout and DashboardTileEntityType. Added new types DashboardTileType and DashboardTileOptionType

--- a/docs/api-reference/CRMScript.NetServer.NSDashboard.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDashboard.yml
@@ -108,14 +108,14 @@ items:
   nameWithType: NSDashboard.GetLayout()
   fullName: CRMScript.NetServer.NSDashboard.GetLayout()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = None</li><li>Enum: 1 = One</li><li>Enum: 2 = TwoVerticalSplit</li><li>Enum: 3 = ThreeESplit</li><li>Enum: 4 = TwoHorizontalSplit</li><li>Enum: 5 = ThreeTSplit</li><li>Enum: 7 = Four</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetLayout()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The dashboard layout, how the tiles are organized on the screen
+      description: The dashboard layout, how the tiles are organized on the screen. See <xref href=\"CRMScript.NetServer.DashboardLayout\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSDashboard thing;\nInteger layout = thing.GetLayout();</code></pre>\n"
 - uid: CRMScript.NetServer.NSDashboard.GetTiles()
@@ -221,7 +221,7 @@ items:
     parameters:
     - id: layout
       type: CRMScript.Global.Integer
-      description: The dashboard layout, how the tiles are organized on the screen. See enum layout.
+      description: The dashboard layout, how the tiles are organized on the screen. See <xref href=\"CRMScript.NetServer.DashboardLayout\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -293,3 +293,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.DashboardLayout
+  commentId: T:CRMScript.NetServer.DashboardLayout
+  isExternal: true
+  name: DashboardLayout
+  nameWithType: DashboardLayout
+  fullName: CRMScript.NetServer.DashboardLayout
