--- a/docs/api-reference/CRMScript.NetServer.NSDashboardTile.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDashboardTile.yml
@@ -206,14 +206,14 @@ items:
   nameWithType: NSDashboardTile.GetEntityType()
   fullName: CRMScript.NetServer.NSDashboardTile.GetEntityType()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = None</li><li>Enum: 1 = Company</li><li>Enum: 2 = Project</li><li>Enum: 3 = Sale</li><li>Enum: 4 = Product</li><li>Enum: 5 = Activity</li><li>Enum: 6 = Document</li><li>Enum: 7 = WebPanel</li><li>Enum: 8 = Followup</li></ul>\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Integer GetEntityType()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The tile entity type
+      description: The tile entity type. See <xref href=\"CRMScript.NetServer.DashboardTileEntityType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSDashboardTile thing;\nInteger entityType = thing.GetEntityType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSDashboardTile.GetGroupId()
@@ -306,14 +306,14 @@ items:
   nameWithType: NSDashboardTile.GetType()
   fullName: CRMScript.NetServer.NSDashboardTile.GetType()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = None</li><li>Enum: 1 = Chart</li><li>Enum: 2 = Web</li><li>Enum: 3 = List</li><li>Enum: 4 = Bignum</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetType()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The tile type, what kind of tile this is
+      description: The tile type, what kind of tile this is. See <xref href=\"CRMScript.NetServer.DashboardTileType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSDashboardTile thing;\nInteger type = thing.GetType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSDashboardTile.GetVisibleFor()
@@ -507,7 +507,7 @@ items:
     parameters:
     - id: entityType
       type: CRMScript.Global.Integer
-      description: The tile entity type. See enum entityType.
+      description: The tile entity type. See <xref href=\"CRMScript.NetServer.DashboardTileEntityType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -617,7 +617,7 @@ items:
     parameters:
     - id: type
       type: CRMScript.Global.Integer
-      description: The tile type, what kind of tile this is. See enum type.
+      description: The tile type, what kind of tile this is. See <xref href=\"CRMScript.NetServer.DashboardTileType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -715,3 +715,15 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.DashboardTileEntityType
+  commentId: T:CRMScript.NetServer.DashboardTileEntityType
+  isExternal: true
+  name: DashboardTileEntityType
+  nameWithType: DashboardTileEntityType
+  fullName: CRMScript.NetServer.DashboardTileEntityType
+- uid: CRMScript.NetServer.DashboardTileType
+  commentId: T:CRMScript.NetServer.DashboardTileType
+  isExternal: true
+  name: DashboardTileType
+  nameWithType: DashboardTileType
+  fullName: CRMScript.NetServer.DashboardTileType
