--- a/docs/api-reference/CRMScript.NetServer.NSDashboardTileOption.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDashboardTileOption.yml
@@ -152,14 +152,14 @@ items:
   nameWithType: NSDashboardTileOption.GetType()
   fullName: CRMScript.NetServer.NSDashboardTileOption.GetType()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = None</li><li>Enum: 1 = String</li><li>Enum: 2 = Integer</li><li>Enum: 3 = Boolean</li><li>Enum: 4 = List</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetType()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The type of option - integer, list, boolean (checkbox) etc.
+      description: The type of option. See <xref href=\"CRMScript.NetServer.DashboardTileOptionType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSDashboardTileOption thing;\nInteger type = thing.GetType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSDashboardTileOption.GetValue()
@@ -309,7 +309,7 @@ items:
     parameters:
     - id: type
       type: CRMScript.Global.Integer
-      description: The type of option - integer, list, boolean (checkbox) etc. See enum type.
+      description: The type of option. See <xref href=\"CRMScript.NetServer.DashboardTileOptionType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -387,3 +387,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.DashboardTileOptionType
+  commentId: T:CRMScript.NetServer.DashboardTileOptionType
+  isExternal: true
+  name: DashboardTileOptionType
+  nameWithType: DashboardTileOptionType
+  fullName: CRMScript.NetServer.DashboardTileOptionType
