--- a/docs/api-reference/CRMScript.NetServer.yml
+++ b/docs/api-reference/CRMScript.NetServer.yml
@@ -43,6 +43,10 @@ items:
   - CRMScript.NetServer.countryId
   - CRMScript.NetServer.CredentialControlType
   - CRMScript.NetServer.crmActorType
+  - CRMScript.NetServer.DashboardLayout
+  - CRMScript.NetServer.DashboardTileEntityType
+  - CRMScript.NetServer.DashboardTileOptionType
+  - CRMScript.NetServer.DashboardTileType
   - CRMScript.NetServer.dataRightValue
   - CRMScript.NetServer.defaultVideomeetingStatus
   - CRMScript.NetServer.delegateMethod
@@ -55,7 +59,6 @@ items:
   - CRMScript.NetServer.durationUnit
   - CRMScript.NetServer.entity
   - CRMScript.NetServer.entityId
-  - CRMScript.NetServer.entityType
   - CRMScript.NetServer.erpActorType
   - CRMScript.NetServer.erpKey
   - CRMScript.NetServer.eventHandlerType
@@ -73,7 +76,6 @@ items:
   - CRMScript.NetServer.isIndexed
   - CRMScript.NetServer.justification
   - CRMScript.NetServer.languageId
-  - CRMScript.NetServer.layout
   - CRMScript.NetServer.level
   - CRMScript.NetServer.LicenseStatus
   - CRMScript.NetServer.lockSemantics
@@ -1372,12 +1374,12 @@ references:
   name: NSDashboard
   nameWithType: NSDashboard
   fullName: CRMScript.NetServer.NSDashboard
-- uid: CRMScript.NetServer.layout
-  commentId: T:CRMScript.NetServer.layout
+- uid: CRMScript.NetServer.DashboardLayout
+  commentId: T:CRMScript.NetServer.DashboardLayout
   isExternal: true
-  name: layout
-  nameWithType: layout
-  fullName: CRMScript.NetServer.layout
+  name: DashboardLayout
+  nameWithType: DashboardLayout
+  fullName: CRMScript.NetServer.DashboardLayout
 - uid: CRMScript.NetServer.NSDashboardAgent
   commentId: T:CRMScript.NetServer.NSDashboardAgent
   isExternal: true
@@ -1390,12 +1392,24 @@ references:
   name: NSDashboardTile
   nameWithType: NSDashboardTile
   fullName: CRMScript.NetServer.NSDashboardTile
-- uid: CRMScript.NetServer.entityType
-  commentId: T:CRMScript.NetServer.entityType
+- uid: CRMScript.NetServer.DashboardTileEntityType
+  commentId: T:CRMScript.NetServer.DashboardTileEntityType
   isExternal: true
-  name: entityType
-  nameWithType: entityType
-  fullName: CRMScript.NetServer.entityType
+  name: DashboardTileEntityType
+  nameWithType: DashboardTileEntityType
+  fullName: CRMScript.NetServer.DashboardTileEntityType
+- uid: CRMScript.NetServer.DashboardTileOptionType
+  commentId: T:CRMScript.NetServer.DashboardTileOptionType
+  isExternal: true
+  name: DashboardTileOptionType
+  nameWithType: DashboardTileOptionType
+  fullName: CRMScript.NetServer.DashboardTileOptionType
+- uid: CRMScript.NetServer.DashboardTileType
+  commentId: T:CRMScript.NetServer.DashboardTileType
+  isExternal: true
+  name: DashboardTileType
+  nameWithType: DashboardTileType
+  fullName: CRMScript.NetServer.DashboardTileType
 - uid: CRMScript.NetServer.NSDashboardTileOption
   commentId: T:CRMScript.NetServer.NSDashboardTileOption
   isExternal: true
