--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -1156,6 +1156,14 @@ items:
       href: CRMScript.NetServer.CredentialControlType.yml
     - name: Enum crmActorType
       href: CRMScript.NetServer.crmActorType.yml
+    - name: DashboardLayout
+      href: CRMScript.NetServer.DashboardLayout.yml
+    - name: DashboardTileEntityType
+      href: CRMScript.NetServer.DashboardTileEntityType.yml
+    - name: DashboardTileOptionType
+      href: CRMScript.NetServer.DashboardTileOptionType.yml
+    - name: DashboardTileType
+      href: CRMScript.NetServer.DashboardTileType.yml
     - name: Enum dataRightValue
       href: CRMScript.NetServer.dataRightValue.yml
     - name: Enum defaultVideomeetingStatus
@@ -1178,8 +1186,6 @@ items:
       href: CRMScript.NetServer.entity.yml
     - name: Enum entityId
       href: CRMScript.NetServer.entityId.yml
-    - name: Enum entityType
-      href: CRMScript.NetServer.entityType.yml
     - name: Enum erpActorType
       href: CRMScript.NetServer.erpActorType.yml
     - name: Enum erpKey
@@ -1214,8 +1220,6 @@ items:
       href: CRMScript.NetServer.justification.yml
     - name: Enum languageId
       href: CRMScript.NetServer.languageId.yml
-    - name: Enum layout
-      href: CRMScript.NetServer.layout.yml
     - name: Enum level
       href: CRMScript.NetServer.level.yml
     - name: Enum LicenseStatus
