#9 Updated NSEx* and NSEventData

--- a/docs/api-reference/CRMScript.NetServer.NSExportArchiveResult.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSExportArchiveResult.yml
@@ -6,10 +6,10 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSExportArchiveResult.#ctor
   - CRMScript.NetServer.NSExportArchiveResult.GetBatchTaskId()
   - CRMScript.NetServer.NSExportArchiveResult.GetFileName()
   - CRMScript.NetServer.NSExportArchiveResult.GetMessage()
-  - CRMScript.NetServer.NSExportArchiveResult.#ctor
   - CRMScript.NetServer.NSExportArchiveResult.SetBatchTaskId(Integer)
   - CRMScript.NetServer.NSExportArchiveResult.SetFileName(String)
   - CRMScript.NetServer.NSExportArchiveResult.SetMessage(String)
@@ -19,63 +19,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSExportArchiveResult.GetBatchTaskId()
-  commentId: M:CRMScript.NetServer.NSExportArchiveResult.GetBatchTaskId()
-  id: 'GetBatchTaskId()'
-  so.intellisense: NSExportArchiveResult.GetBatchTaskId
-  langs:
-  - crmscript
-  name: 'GetBatchTaskId()'
-  nameWithType: NSExportArchiveResult.GetBatchTaskId()
-  fullName: CRMScript.NetServer.NSExportArchiveResult.GetBatchTaskId()
-  type: Method
-  summary: "\nID of the BatchTask created. &lt;=0 if no BatchTask was created.\n"
-  remarks: 
-  syntax: 
-    content: Integer GetBatchTaskId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSExportArchiveResult thing;\nInteger batchTaskId = thing.GetBatchTaskId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSExportArchiveResult.GetFileName()
-  commentId: M:CRMScript.NetServer.NSExportArchiveResult.GetFileName()
-  id: 'GetFileName()'
-  so.intellisense: NSExportArchiveResult.GetFileName
-  langs:
-  - crmscript
-  name: 'GetFileName()'
-  nameWithType: NSExportArchiveResult.GetFileName()
-  fullName: CRMScript.NetServer.NSExportArchiveResult.GetFileName()
-  type: Method
-  summary: "\nThe path to the output file created, if it exists. Will be an empty string if no file was created.\n"
-  remarks: 
-  syntax: 
-    content: String GetFileName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSExportArchiveResult thing;\nString fileName = thing.GetFileName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSExportArchiveResult.GetMessage()
-  commentId: M:CRMScript.NetServer.NSExportArchiveResult.GetMessage()
-  id: 'GetMessage()'
-  so.intellisense: NSExportArchiveResult.GetMessage
-  langs:
-  - crmscript
-  name: 'GetMessage()'
-  nameWithType: NSExportArchiveResult.GetMessage()
-  fullName: CRMScript.NetServer.NSExportArchiveResult.GetMessage()
-  type: Method
-  summary: "\nDescriptive messages; errors, etc.\n"
-  remarks: 
-  syntax: 
-    content: String GetMessage()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSExportArchiveResult thing;\nString message = thing.GetMessage();</code></pre>\n"
 - uid: CRMScript.NetServer.NSExportArchiveResult.#ctor
   commentId: M:CRMScript.NetServer.NSExportArchiveResult.#ctor
   id: '#ctor'
@@ -91,6 +34,66 @@ items:
   syntax: 
     content: NSExportArchiveResult
   example: 
+- uid: CRMScript.NetServer.NSExportArchiveResult.GetBatchTaskId()
+  commentId: M:CRMScript.NetServer.NSExportArchiveResult.GetBatchTaskId()
+  id: 'GetBatchTaskId()'
+  so.intellisense: NSExportArchiveResult.GetBatchTaskId
+  langs:
+  - crmscript
+  name: 'GetBatchTaskId()'
+  nameWithType: NSExportArchiveResult.GetBatchTaskId()
+  fullName: CRMScript.NetServer.NSExportArchiveResult.GetBatchTaskId()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Integer GetBatchTaskId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: ID of the BatchTask created. &lt;=0 if no BatchTask was created.
+  example: 
+  - "\n<pre><code>NSExportArchiveResult thing;\nInteger batchTaskId = thing.GetBatchTaskId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSExportArchiveResult.GetFileName()
+  commentId: M:CRMScript.NetServer.NSExportArchiveResult.GetFileName()
+  id: 'GetFileName()'
+  so.intellisense: NSExportArchiveResult.GetFileName
+  langs:
+  - crmscript
+  name: 'GetFileName()'
+  nameWithType: NSExportArchiveResult.GetFileName()
+  fullName: CRMScript.NetServer.NSExportArchiveResult.GetFileName()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetFileName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The path to the output file created, if it exists. Will be an empty string if no file was created.
+  example: 
+  - "\n<pre><code>NSExportArchiveResult thing;\nString fileName = thing.GetFileName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSExportArchiveResult.GetMessage()
+  commentId: M:CRMScript.NetServer.NSExportArchiveResult.GetMessage()
+  id: 'GetMessage()'
+  so.intellisense: NSExportArchiveResult.GetMessage
+  langs:
+  - crmscript
+  name: 'GetMessage()'
+  nameWithType: NSExportArchiveResult.GetMessage()
+  fullName: CRMScript.NetServer.NSExportArchiveResult.GetMessage()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetMessage()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Descriptive messages; errors, etc.
+  example: 
+  - "\n<pre><code>NSExportArchiveResult thing;\nString message = thing.GetMessage();</code></pre>\n"
 - uid: CRMScript.NetServer.NSExportArchiveResult.SetBatchTaskId(Integer)
   commentId: M:CRMScript.NetServer.NSExportArchiveResult.SetBatchTaskId(Integer)
   id: 'SetBatchTaskId(Integer)'
@@ -101,14 +104,14 @@ items:
   nameWithType: NSExportArchiveResult.SetBatchTaskId(Integer)
   fullName: CRMScript.NetServer.NSExportArchiveResult.SetBatchTaskId(Integer)
   type: Method
-  summary: "\nID of the BatchTask created. &lt;=0 if no BatchTask was created.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetBatchTaskId(Integer batchTaskId)
     parameters:
     - id: batchTaskId
       type: CRMScript.Global.Integer
-      description: 
+      description: ID of the BatchTask created. &lt;=0 if no BatchTask was created.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -123,14 +126,14 @@ items:
   nameWithType: NSExportArchiveResult.SetFileName(String)
   fullName: CRMScript.NetServer.NSExportArchiveResult.SetFileName(String)
   type: Method
-  summary: "\nThe path to the output file created, if it exists. Will be an empty string if no file was created.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetFileName(String fileName)
     parameters:
     - id: fileName
       type: CRMScript.Global.String
-      description: 
+      description: The path to the output file created, if it exists. Will be an empty string if no file was created.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -145,14 +148,14 @@ items:
   nameWithType: NSExportArchiveResult.SetMessage(String)
   fullName: CRMScript.NetServer.NSExportArchiveResult.SetMessage(String)
   type: Method
-  summary: "\nDescriptive messages; errors, etc.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetMessage(String message)
     parameters:
     - id: message
       type: CRMScript.Global.String
-      description: 
+      description: Descriptive messages; errors, etc.
     return:
       type: CRMScript.Global.Void
   example: 
